[package]
name = "coco"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.9"
noisy_float = { version = "0.1", features = ["serde-1"] }
url = "2.1"
chrono = "0.4"
async-std = { version = "1.6", features = ["unstable", "attributes"], optional = true }

[dev-dependencies]
argh = "0.1"

[features]
async = ["async-std"]
