[package]
name = "coco"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
itertools = "0.10.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
url = "2.2.1"
chrono = "0.4.19"
async-std = { version = "1.9.0", features = ["unstable", "attributes"], optional = true }

[dev-dependencies]
argh = "0.1.4"

[features]
async = ["async-std"]
